--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -2,12 +2,12 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">@color/toolbar</item>
-        <item name="colorPrimaryDark">@color/accent</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primaryDark</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:textColorPrimary">@color/toolbar_text</item>
         <item name="actionMenuTextColor">@color/toolbar_text</item>
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-        <item name="colorControlActivated">@color/accent</item>
+        <item name="colorControlActivated">@color/primary</item>
     </style>
 </resources>
